<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fuzz.qrscanner.MainActivity">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:text="Scan"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/btnScan"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />

        <Button
            android:text="Save"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/btnSave"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/btnScan"
            android:layout_toLeftOf="@+id/btnScan"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_below="@+id/buttonLayout"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/label_name"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtName"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNameLayout"
                android:layout_marginTop="12dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/label_email"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtOrgLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEmailLayout"
                android:layout_marginTop="12dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/label_org"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtOrg"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtOrgLayout"
                android:layout_marginTop="12dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/label_title"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtTitle"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtRawLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitleLayout"
                android:layout_marginTop="12dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/label_raw"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtRaw"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
